# ceri-m1-ecommerce-2022

./: DockerFileBackEnd  DockerFileFrontEnd  README.md  default.conf.template  package-lock.json
.github/workflow/: main.yaml
.github/workflows/: CI.yml  front-end_CI.yml  main.yaml  terraform.yml
appli_ecommerce/: README.md  angular.json  karma.conf.js  main.py  package-lock.json  package.json  vinyles.db
appli_ecommerce/src/: index.html
appli_ecommerce/src/app/: app-routing.module.ts  app.component.spec.ts  app.component.ts  app.module.ts  liste-albums.service.spec.ts  liste-albums.service.ts
back/: Dockerfile  admin.py  commande.py  connexion.py  database.py  identifiantsbdd.py  main.py  requirements.txt
backend/: Dockerfile  commandback.txt  database.db  main.py  pyproject.toml  requirements.txt
backend/src/: api.py
backend/src/db/: database.py  main.py
backend/src/db/db_class/: album.py  artist.py  song.py
backend/src/models/: all_class.py
docs/: bddEcommerce.plantuml
front/: Dockerfile  angular.json  package-lock.json  package.json
front/src/: index.html
front/src/app/: app-routing.module.ts  app.component.html  app.component.spec.ts  app.component.ts  app.module.ts  connexion.service.ts  liste-albums.service.ts
front/src/environments/: environment.prod.ts  environment.ts
platinum-front-end/: Dockerfile  package.json
platinum-front-end/docker/: Dockerfile
platinum-front-end/public/: index.html
platinum-front-end/src/: App.tsx
platinum-front-end/src/components/: searchAppBar.tsx  vinylCard.tsx
terraform/: main.tf
(+30 files in other folders)
