[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Théo Colin <theo.colin@alumni.univ-avignon.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.85.1"
sqlmodel = "^0.0.8"
uvicorn = "^0.18.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
multi_line_output = 3
